--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 			as tested on an
 			<a href="https://www.oculus.com/quest/" target="_blank">Oculus Quest</a>
 			stand-alone headset.
+			Make your hand into a “finger gun” 
+			then tap your thumb down 
+			to shoot lasers from your index finger.
 			This experience is live at 
 			<a href="https://stewartsmith.io/studies/vr-hands/">https://stewartsmith.io/studies/vr-hands/</a>.
 			This code is open-source and available at
