--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 		<meta name="author"      content="Stewart Smith">
 		<meta name="copyright"   content="Stewart Smith 2020">
 
-		<meta name="twitter:card"         content="summary">
+		<meta name="twitter:card"         content="summary_large_image">
 		<meta name="twitter:site"         content="@stew_rtsmith">
 		<meta name="twitter:creator"      content="@stew_rtsmith">
 		<meta name="twitter:title"        content="VR Hands">
 		<meta name="twitter:description"  content="Finger guns via Oculus Quest hand tracking and Three.js.">
-		<meta name="twitter:image"        content="http://stewartsmith.io/studies/vr-hands/media/vr-hands.gif">
+		<meta name="twitter:image"        content="http://stewartsmith.io/studies/vr-hands/media/vr-hands.jpg">
 		<meta name="twitter:url"          content="http://stewartsmith.io/studies/vr-hands/">
 		
 		<meta property="og:type"          content="website">
 		<meta property="og:title"         content="VR Hands">
 		<meta property="og:description"   content="Finger guns via Oculus Quest hand tracking and Three.js.">
-		<meta property="og:image"         content="http://stewartsmith.io/studies/vr-hands/media/vr-hands.gif">
+		<meta property="og:image"         content="http://stewartsmith.io/studies/vr-hands/media/vr-hands.jpg">
 		<meta property="og:url"           content="http://stewartsmith.io/studies/vr-hands/">
 
 		<link type="text/css" rel="stylesheet" href="styles/base.css">
