Introducing Handy.js

--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 	<body>
 		<div id="three"></div>
 		<section>
-		
-
 			👋 Ahoy.<br>
 			<br>
 			I’m <a href="https://stewartsmith.io" target="_blank">Stewart</a>.
@@ -39,14 +37,19 @@
 			as tested on an
 			<a href="https://www.oculus.com/quest/" target="_blank">Oculus Quest</a>
 			stand-alone headset.
+			This experience is live at 
+			<a href="https://stewartsmith.io/studies/vr-hands/">https://stewartsmith.io/studies/vr-hands/</a>.
+			This code is open-source and available at
+			<a href="https://github.com/stewdio/vr-hands" target="_blank">https://github.com/stewdio/vr-hands</a>.
+			<br>
+			<br>
+			<strong>Explore</strong>.
 			Make your hand into a “finger gun” shape
 			then tap your thumb down 
 			onto your middle finger
 			to shoot lasers from your hand.
-			This experience is live at 
-			<a href="https://stewartsmith.io/studies/vr-hands/">https://stewartsmith.io/studies/vr-hands/</a>.
-			This code is open-source and available at
-			<a href="https://github.com/stewdio/xr-hands" target="_blank">https://github.com/stewdio/xr-hands</a>.
+			Make a fist to cycle through different hand model styles.
+			“Devil horns” toggle the hand-specific colors.
 			<br>
 			<br>
 			<br>
